--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'commons-io:commons-io:1.3.2'
     implementation 'com.android.support:support-v4:26.1.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile (
+    compile(
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
