--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,16 @@ dependencies {
     implementation 'commons-io:commons-io:1.3.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile(
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation(
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
     )
-    compile 'javax.persistence:persistence-api:1.0.2'
+    implementation 'javax.persistence:persistence-api:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
