--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,25 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
-    implementation 'com.android.support:recyclerview-v7:26.+'
-    implementation 'commons-io:commons-io:1.3.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.code.gson:gson:2.8.2'
+
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+
+    implementation 'commons-io:commons-io:1.3.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation(
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
-    )
-    implementation 'javax.persistence:persistence-api:1.0.2'
+
+    implementation 'com.arello-mobile:moxy:1.5.1'
+    implementation 'com.arello-mobile:moxy-android:1.1.1'
+
+    provided 'com.arello-mobile:moxy-compiler:1.1.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
