--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:name=".client.App"
+        android:name=".client.mvp.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CloudTheme">
-        <activity android:name=".client.auth.view.AuthActivity">
+        <activity android:name=".client.mvp.ui.auth.activity.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".client.main.view.MainActivity"
+            android:name=".client.ui.activity.main.MainActivity"
             android:theme="@style/CloudTheme.NoActionBar"/>
     </application>
 
