--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation 'com.arello-mobile:moxy:1.5.1'
-    implementation 'com.arello-mobile:moxy-android:1.1.1'
+    implementation 'com.arello-mobile:moxy:1.5.3'
+    implementation 'com.arello-mobile:moxy-android:1.5.3'
+    implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
 
-    provided 'com.arello-mobile:moxy-compiler:1.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
