--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -34,7 +35,7 @@ dependencies {
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
 
-    implementation 'commons-io:commons-io:1.3.2'
+    implementation 'commons-io:commons-io:2.4'
     implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
