Добавлена поддержка API 14 Исправлены замечания

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <service
             android:name=".client.service.LoaderService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="false"/>
     </application>
 
 </manifest>
