Добавлен виджет с отображением информации

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,18 @@
         <service
             android:name=".client.service.LoaderService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <receiver android:name=".client.widget.FilesAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/files_app_widget_info" />
+        </receiver>
+
     </application>
 
 </manifest>
